# currex

./: .gitignore  .pre-commit-config.yaml  README.md  currex.ipynb  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
currex/: __init__.py  config.py  currency.py  exchange.py  factory.py
pythonic_money/: __init__.py
tests/: __init__.py  test_currency.py  test_currency_chain.py  test_currency_exchange.py  test_currency_operations.py
