[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currex"
version = "0.1.2"
description = "A Pythonic currency calculator with real-time exchange rates"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Piotr Migdał" },
]
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stared/currex"

[tool.hatch.build.targets.wheel]
packages = ["currex"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "api: marks tests that require external API access (deselect with '-m \"not api\"')",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "types-requests>=2.31.0",
    "pytest>=8.3.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.lint.isort]
combine-as-imports = true
